# 42Cursus

./: .gitignore  README.md  computorv1.py
Ready, Set, Boole!/: adder.cpp  eval_formula.cpp  functions.hpp  gray_code.cpp  multiplier.cpp  print_truth_table.cpp
computorv1/: computorv1.py
fract-ol/: Makefile  color.c  complex.c  fractol  fractol.h  hooks.c  main.c  mlx.c  parsing.c  sets.c
fract-ol/libft/: libft.h  (+8 more)
ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_utils.c
ft_transcendence/: Makefile  docker-compose.yml  package-lock.json
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
inception/: Makefile
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
matrix/: Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  main.cpp
minirt/: Makefile  minirt.h
minishell/: Makefile  main.c  minishell.h
minitalk/: Makefile  client.c  minitalk.h  server.c
push_swap/: Makefile  bonus.c  instructions_1.c  instructions_2.c  main.c  parsing.c  push_swap.h  push_swap_utils_1.c  push_swap_utils_2.c  push_swap_utils_3.c  solve.c
python/0/ex09/: LICENSE  pyproject.toml
(+473 files in other folders)
